[gd_scene load_steps=7 format=3 uid="uid://y88h8l3e8amy"]

[ext_resource type="Texture2D" uid="uid://c254u2qmrdx2o" path="res://Art/Objects/MudslideBroken-Sheet.png" id="1_sjs1r"]
[ext_resource type="Script" path="res://Level Items/mudslide.gd" id="2_gxx1o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_q5lq6"]
atlas = ExtResource("1_sjs1r")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhvsh"]
atlas = ExtResource("1_sjs1r")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_abj0d"]
atlas = ExtResource("1_sjs1r")
region = Rect2(0, 64, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_q1rwd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5lq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhvsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abj0d")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MudslideBroken" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_q1rwd")
script = ExtResource("2_gxx1o")

[node name="SlipZone" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SlipZone"]
polygon = PackedVector2Array(-11, -7, -1, -14, 3, -25, 9, -29, 14, -25, 13, -14, 10, -11, 13, -7, 13, -3, 15, 0, 11, 16, -6, 16, -11, 8)

[node name="AwayFrom" type="Node2D" parent="."]
position = Vector2(-47, -27)

[node name="AwayFrom2" type="Node2D" parent="."]
position = Vector2(-45, 21)

[connection signal="body_entered" from="SlipZone" to="." method="_on_slip_zone_body_entered"]
[connection signal="body_exited" from="SlipZone" to="." method="_on_slip_zone_body_exited"]
